--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "verify": "bash tools/verify-build.sh"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
